@@ -3,13 +3,16 @@
 S3method(autoplot,smoof_function)
 S3method(autoplot,smoof_wrapped_function)
 S3method(getDescription,smoof_function)
+S3method(getDescription,smoof_shifted_function)
 S3method(getDescription,smoof_wrapped_function)
 S3method(getGlobalOptimum,smoof_multi_objective_function)
+S3method(getGlobalOptimum,smoof_shifted_function)
 S3method(getGlobalOptimum,smoof_single_objective_function)
 S3method(getGlobalOptimum,smoof_wrapped_function)
 S3method(getID,smoof_function)
 S3method(getID,smoof_wrapped_function)
 S3method(getLocalOptimum,smoof_multi_objective_function)
+S3method(getLocalOptimum,smoof_shifted_function)
 S3method(getLocalOptimum,smoof_single_objective_function)
 S3method(getLocalOptimum,smoof_wrapped_function)
 S3method(getLoggedValues,smoof_logging_function)
@@ -17,6 +20,7 @@ S3method(getLoggedValues,smoof_wrapped_function)
 S3method(getLowerBoxConstraints,smoof_function)
 S3method(getLowerBoxConstraints,smoof_wrapped_function)
 S3method(getMeanFunction,smoof_function)
+S3method(getMeanFunction,smoof_shifted_function)
 S3method(getMeanFunction,smoof_wrapped_function)
 S3method(getName,smoof_function)
 S3method(getName,smoof_wrapped_function)
@@ -27,39 +31,53 @@ S3method(getNumberOfObjectives,smoof_wrapped_function)
 S3method(getNumberOfParameters,smoof_function)
 S3method(getNumberOfParameters,smoof_wrapped_function)
 S3method(getParamSet,smoof_function)
+S3method(getParamSet,smoof_shifted_function)
 S3method(getParamSet,smoof_wrapped_function)
 S3method(getRefPoint,smoof_multi_objective_function)
 S3method(getRefPoint,smoof_single_objective_function)
 S3method(getRefPoint,smoof_wrapped_function)
+S3method(getShift,smoof_function)
+S3method(getShift,smoof_shifted_function)
+S3method(getShift,smoof_wrapped_function)
 S3method(getTags,smoof_function)
 S3method(getTags,smoof_generator)
 S3method(getTags,smoof_wrapped_function)
 S3method(getUpperBoxConstraints,smoof_function)
 S3method(getUpperBoxConstraints,smoof_wrapped_function)
 S3method(getWrappedFunction,smoof_function)
+S3method(getWrappedFunction,smoof_shifted_function)
 S3method(getWrappedFunction,smoof_wrapped_function)
 S3method(hasBoxConstraints,smoof_function)
+S3method(hasBoxConstraints,smoof_shifted_function)
 S3method(hasBoxConstraints,smoof_wrapped_function)
 S3method(hasConstraints,smoof_function)
+S3method(hasConstraints,smoof_shifted_function)
 S3method(hasConstraints,smoof_wrapped_function)
 S3method(hasGlobalOptimum,smoof_multi_objective_function)
+S3method(hasGlobalOptimum,smoof_shifted_function)
 S3method(hasGlobalOptimum,smoof_single_objective_function)
 S3method(hasGlobalOptimum,smoof_wrapped_function)
 S3method(hasLocalOptimum,smoof_multi_objective_function)
+S3method(hasLocalOptimum,smoof_shifted_function)
 S3method(hasLocalOptimum,smoof_single_objective_function)
 S3method(hasLocalOptimum,smoof_wrapped_function)
 S3method(hasOtherConstraints,smoof_function)
+S3method(hasOtherConstraints,smoof_shifted_function)
 S3method(hasOtherConstraints,smoof_wrapped_function)
 S3method(hasTags,character)
 S3method(hasTags,smoof_function)
 S3method(hasTags,smoof_generator)
 S3method(isMultiobjective,smoof_function)
+S3method(isMultiobjective,smoof_shifted_function)
 S3method(isMultiobjective,smoof_wrapped_function)
 S3method(isNoisy,smoof_function)
+S3method(isNoisy,smoof_shifted_function)
 S3method(isNoisy,smoof_wrapped_function)
 S3method(isSingleobjective,smoof_function)
+S3method(isSingleobjective,smoof_shifted_function)
 S3method(isSingleobjective,smoof_wrapped_function)
 S3method(isVectorized,smoof_function)
+S3method(isVectorized,smoof_shifted_function)
 S3method(isVectorized,smoof_wrapped_function)
 S3method(plot,smoof_function)
 S3method(plot,smoof_wrapped_function)
@@ -88,6 +106,7 @@ export(getNumberOfEvaluations)
 export(getNumberOfObjectives)
 export(getNumberOfParameters)
 export(getRefPoint)
+export(getShift)
 export(getTags)
 export(getUpperBoxConstraints)
 export(getWrappedFunction)
@@ -245,6 +264,7 @@ export(makeZDT4Function)
 export(makeZDT6Function)
 export(makeZettlFunction)
 export(mnof)
+export(moveOrigin)
 export(plot1DNumeric)
 export(plot2DNumeric)
 export(plot3D)
